--- a/styles.css
+++ b/styles.css
@@ -177,7 +177,7 @@ font-size: 20px;
   display: block;
   text-align: center;
   margin:200px 140px ;
-  padding: 150px 100px;
+  padding: 100px 100px;
   border-radius: 16px;
   
 
@@ -186,7 +186,7 @@ background: rgba(255, 0, 0, 0.05);
  }
  .subscribe-desc{
   color: rgba(132, 127, 140, 0.6);
-
+    margin-top: -20px;
 font-family: Inter;
 font-size: 20px;
 
@@ -202,33 +202,46 @@ text-transform: capitalize;
  display: flex;
 align-items: center;
 justify-content: center;
-border:none;
+padding-top: 60px;
+
+ }
+ .input-field{
+  border-top-left-radius: 50px;
+border-bottom-left-radius: 50px;
+border: none;
 outline: none;
-border-radius: 50px;
-
-  
+padding: 10px;
  }
- /* .input-feild{
-  width: 648px;
-  height: 102px;
-  padding: 20px;
-  display: relative;
- 
- } */
-  /* .action-button{
- 
-  padding:8px 6px;
- } */
- .input-container input,button{
-  border-radius: 50px;
-  padding:10px;
- 
-
- }
- .input-container button{
-  background-color: red;
-  padding:10px;
+ .subscribe-button{
+  border-top-right-radius: 50px;
+  border-bottom-right-radius: 50px;
   border: none;
-  outline: none;
-  gap: 0;
- } 
+outline: none;
+padding: 10px;
+background-color: #F00;
+
+ }
+ 
+
+ /* footer style */
+ .footer-style{
+color: white;
+  width: 1600px;
+height: 609px;
+background-color: #070211;
+margin-top:120px;
+width: 100%;
+ }
+
+ .first-row{
+  display: flex;
+  justify-content: space-around;
+  padding: 120px 140px;
+ }
+ .second-row{
+  display: flex;
+  justify-content: space-around;
+  padding: 120px 140px;
+ }
+
+
