--- a/styles.css
+++ b/styles.css
@@ -142,7 +142,8 @@ padding: 5px;
   width: 1320px;
 height: 482px;
 margin-left: 150px;
-background-color: coral;
+border-radius: 16px;
+background: rgba(255, 0, 0, 0.05);
 }
 .party-schedule{
   text-align: center;
@@ -313,3 +314,4 @@ width: 100%;
   gap:15px;
 
 }
+
